Remove one stage

--- a/Jenkinsfile.2
+++ b/Jenkinsfile.2
@@ -3,6 +3,12 @@ pipeline {
     agent any
     
     stages {
+        stage('checkout') {
+            steps {
+                git branch:'main', url: 'https://github.com/mrobergl/sample-maven-project.git'   
+            }
+        }
+        
         stage('build') {
             steps {
                 sh '/usr/share/maven/bin/mvn package'   
